<resources>
    <string name="app_name">CoordinateSystem</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="SecActivity">Jopa</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="exp">exp(x)</string>
    <string name="pow">x^2</string>
    <string name="cos">cos(x)</string>
    <string name="sin">sin(x)</string>
    <string name="BuildTheGrath">Build</string>
    <string name="StartXYMaxValue">5</string>
    <string name="StartXYMinValue">-5</string>
    <string name="xmaxView">X\nmax</string>
    <string name="yminView">Y\nmin</string>
    <string name="xminView">X\nmin</string>
    <string name="ymaxView">Y\nmax</string>
    <string name="CenaDelY">Цена Деления Y</string>
    <string name="CenaDelX">Цена деления X</string>
    <string name="StartCenaDelXY">1</string>
    <string name="xVstepeni2">x^2</string>
    <string name="todo">TODO</string>
    <string name="tgx">tg(x)</string>
    <string name="ctg_x">ctg(x)</string>
</resources>