<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutActiv3"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/DrawLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/build"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="132dp"
        android:layout_height="70dp"
        android:text="@string/BuildTheGrath"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutActiv3IN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/close_open_formulas_input"
        android:layout_width="60dp"
        android:background="@null"
        android:layout_height="60dp"
        android:scaleType="fitCenter"

        android:src="@drawable/close_formula_input"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutActiv3IN"
        app:layout_constraintEnd_toStartOf="@+id/build"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="TODO" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutActiv3IN"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:alpha="255"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".MainActivity2"
        tools:layout_editor_absoluteX="0dp">


        <ScrollView

            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"

            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="255"
            android:background="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/formula_inputs_container_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/formula_inputs_container"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/FormulaInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="255"


                        android:background="@drawable/close_btn_back"
                        android:inputType="text"
                        android:padding="10dp"
                        android:text="@string/xVstepeni2"
                        android:textAlignment="textStart"
                        android:textColor="@color/DeepBrown"
                        android:textSize="30sp"
                        android:visibility="visible"


                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/formula_inputs_container2"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="end"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/FormulaInput2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:alpha="255"


                        android:background="@drawable/edittext_shadow"
                        android:inputType="text"
                        android:padding="10dp"
                        android:text=""
                        android:textAlignment="textStart"
                        android:textColor="@color/DeepBrown"
                        android:textSize="30sp"
                        android:visibility="visible" />

                    <ImageButton
                        android:id="@+id/ImageBtnDestroy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="6"
                        android:background="@drawable/close_btn_back"
                        android:contentDescription="@string/todo"
                        android:paddingBottom="5dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_close_round_realvect"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/formula_inputs_container3"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <ImageButton
                        android:id="@+id/ImageBtnCreate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="6"
                        android:background="@null"
                        android:contentDescription="@string/todo"


                        android:scaleType="centerInside"
                        android:src="@drawable/ic_plus_round_real_vect" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>